--- a/n/ne/net/netglimse.com.html
+++ b/n/ne/net/netglimse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netglimse.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219221422id_/http%3A//netglimse.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netglimse.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005129id_/http%3A//netglimse.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" href="/style.css" type="text/css">
@@ -11,18 +11,11 @@
 </head>
 <body>
 
-<table cellpadding="0" cellspacing="0" border="0"><tbody><tr><td><a href="http://www.netglimse.com"><img src="/images/logo.jpg" border="0" alt="logo"></a></td><td width="1%"></td><td><!-- TF 468x60 JScript HORIZ code -->
-<center><script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=Netglimsecom&adSpace=ROS&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-//-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Netglimsecom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20220784180.48603350259859557"></script>
-<noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=Netglimsecom&adSpace=ROS&size=468x60&requestID=1892838620" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=Netglimsecom&adSpace=ROS&size=468x60&requestID=1892838620" 
-                  width=468 height=60 border=0 alt="Click Here"></a>
-</noscript>
-</center>
-<!-- TF 468x60 JScript HORIZ code -->
+<table cellpadding="0" cellspacing="0" border="0"><tbody><tr><td><a href="http://www.netglimse.com"><img src="/images/logo.jpg" border="0" alt="logo"></a></td><td width="1%"></td><td><!-- FASTCLICK.COM 728x90 and 468x60 BANNER CODE for netglimse.com -->
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=4314&amp;m=1&amp;tp=5&amp;d=j&amp;t=s"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=4314&m=1&c=1" target="_top">
+<img src="http://media.fastclick.net/w/get.media?sid=4314&m=1&tp=5&d=s&c=1" width=728 height=90 border=1></a></noscript>
+<!-- FASTCLICK.COM 728x90 and 468x60 BANNER CODE for netglimse.com -->
 </td></tr></tbody></table>
 
 
