--- a/h/he/hen/hentaiboss.com.html
+++ b/h/he/hen/hentaiboss.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hentaiboss.com privacy policy that was archived on 2005-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051208063704id_/http%3A//www.hentaiboss.com/external.php%3Fpage%3Dprivacy%26ref%3D%26nats%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hentaiboss.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005212id_/http%3A//hentaiboss.com/external.php%3Fpage%3Dprivacy%26ref%3D%26nats%3D) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <style type="text/css"><!--
@@ -81,6 +81,7 @@ A.outside:hover { text-decoration: none; color: #D6EAFF;}
       </font></blockquote></td>
   </tr>
 </tbody></table>
+
 </td>
     </tr>
   </tbody></table>
