--- a/5/50/50s/50states.com.html
+++ b/5/50/50s/50states.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 50states.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210103247id_/http%3A//50states.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 50states.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005312id_/http%3A//50states.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Privacy Policy</title>
 <meta http-equiv="pics-label" content="(PICS-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.50states.com/&quot; r (cz 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.50states.com/&quot; r (n 0 s 0 v 0 l 0) &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://50states.com/&quot; r (cz 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://50states.com/&quot; r (n 0 s 0 v 0 l 0))"> 
@@ -11,36 +11,18 @@
 <body text="#000000" link="#0000FF" vlink="#B22222">
 <table align="center" border="0" width="800" cellpadding="0" bgcolor="#FFFFFF"><tbody><tr><td>
 <!--BEGIN_HEADER-->
+
 <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
 <tbody><tr>
 <td width="30%" valign="top">
 <a href="http://www.50states.com"><img src="http://www.50states.com/images/50logo.gif" border="0" width="246" height="40"></a>
 </td>
-<td width="70%">
+<td width="70%" align="right">
 
-<!-- TF 468x60 JScript NoPop code -->
-<center><!--
-<script language=javascript>
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=50states&adSpace=ROS&size=468x60&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-</script>
+<!-- BANNER AD -->
+<!--iframe src="http://www.50states.com/include/banner.htm" width="468" height="60" hspace="0" vspace="0" marginheight="0" marginwidth="0" frameborder="0" scrolling="no"></iframe-->
+<iframe width="468" height="60" marginwidth="0" marginheight="0" border="0" frameborder="no" scrolling="no" src="http://ads2.drivelinemedia.com/html.ng/Params.richmedia=yes&amp;cid=191257&amp;position=topbanner&amp;sid=50states.com&amp;adsize=468x60&amp;supercat=Directory+and+Reference&amp;cat=Other&amp;subcat=Other&amp;country=US&amp;domain=50states.com&amp;transactionID=14062006175312" hspace="0" vspace="0"></iframe>
 
-<noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=50states&adSpace=ROS&size=468x60&requestID=822906846" target=_blank >
-   <img src="http://a.tribalfusion.com/i.ad?site=50states&adSpace=ROS&size=468x60&requestID=822906846" 
-                  width=468 height=60 border=0 alt="Click Here"></a>
-</noscript>
--->
-
-<!-- ---------- Advertising.com Banner Code -------------- --> 
-<script language="JavaScript"> 
-var bnum=new Number(Math.floor(99999999 * Math.random())+1); 
-document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
-document.write('SRC="http://servedby.advertising.com/site=689779/size=468060/bnum='+bnum+'/optn=1"></SCR'+'IPT>'); 
-</script><script language="JavaScript" src="http://servedby.advertising.com/site=689779/size=468060/bnum=80345091/optn=1"></script> 
-<!-- ---------- Copyright 2000, Advertising.com ---------- -->
-
-</center>
-<!-- TF 468x60 JScript NoPop code -->
 
 </td>
 </tr>
@@ -141,22 +123,26 @@ The E-mail information we collect is used to:</p>
 </td>
 <td width="2">&nbsp;</td>
 <td width="165" bgcolor="#336699" valign="top" align="center">
-<script language="JavaScript">
-<!--
-google_ad_client = 'pub-0169224604500094';
+<script type="text/javascript"><!--
+google_ad_client = "pub-0169224604500094";
 google_ad_width = 120;
 google_ad_height = 600;
-google_ad_format = '120x600_as';
-// -->
-</script>
-<script language="JavaScript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-<br><br>
+google_ad_format = "120x600_as";
+google_ad_type = "text";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script><br><br>
 </td>
 </tr>
 <tr>
 <td colspan="3">
 <!--BEGIN_FOOTER-->
+
 <hr color="#0D206C">
 <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#ffffff"><tbody><tr><td>
 <!--BEGIN_NAVBAR-->
@@ -180,13 +166,30 @@ google_ad_format = '120x600_as';
 </font></center>
 <!--END_NAVBAR-->
 </td></tr></tbody></table><br>
+
 <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0">
 <tbody><tr>
-<td align="left" width="25%"><a href="http://www.50states.com/contact/"><img src="http://www.50states.com/images/email1.jpg" alt="Contact Us" border="0" height="38" width="65"></a></td>
-<td align="center" width="50%"><a href="http://www.shop50states.com/"><img src="http://www.50states.com/images/aos.gif" vspace="15" height="40" width="160" border="0"></a></td>
-<td align="right" width="25%"><a href="http://www.50states.com/"><img src="http://www.50states.com/images/home.jpg" alt="50states.com" border="0" height="38" width="65" align="rig56t"></a></td>
+<td align="left" width="25%"><a href="http://www.50states.com/contact/"><img src="http://www.50states.com/images/email1.jpg" alt="Contact Us" border="0" height="38" width="65"></a>
+<br clear="all"><br style="line-height: 10px">
+
+<!-- DART BANNER -->
+<iframe width="234" height="60" marginwidth="0" marginheight="0" border="0" frameborder="no" scrolling="no" src="http://ads2.drivelinemedia.com/html.ng/Params.richmedia=yes&amp;cid=191257&amp;position=foothalfbannerleft&amp;sid=50states.com&amp;adsize=234x60&amp;supercat=Directory+and+Reference&amp;cat=Other&amp;subcat=Other&amp;country=US&amp;domain=50states.com&amp;transactionID=14062006175312" hspace="0" vspace="0"></iframe>
+
+</td>
+
+<td align="center" width="50%"><a href="http://www.shop50states.com/"><img src="http://www.50states.com/images/aos.gif" vspace="15" height="40" width="160" border="0"></a>
+<br>
+<font size="-2">Copyright © 2006 Marchex, Inc.<br>All Rights Reserved.</font>
+</td>
+
+<td align="right" width="25%"><a href="http://www.50states.com/"><img src="http://www.50states.com/images/home.jpg" alt="50states.com" border="0" height="38" width="65"></a>
+<br clear="all"><br style="line-height: 10px">
+
+<!-- DART BANNER -->
+<iframe width="234" height="60" marginwidth="0" marginheight="0" border="0" frameborder="no" scrolling="no" src="http://ads2.drivelinemedia.com/html.ng/Params.richmedia=yes&amp;cid=191257&amp;position=foothalfbannerright&amp;sid=50states.com&amp;adsize=234x60&amp;supercat=Directory+and+Reference&amp;cat=Other&amp;subcat=Other&amp;country=US&amp;domain=50states.com&amp;transactionID=14062006175313" hspace="0" vspace="0"></iframe>
+
+</td>
 </tr></tbody></table>
-<center><font size="-2">Copyright © 2005 Pike Street Industries, Inc.<br>All Rights Reserved.</font></center>
 <!--END_FOOTER-->
 </td></tr>
 </tbody></table>
