--- a/d/di/dil/dilbert.com.html
+++ b/d/di/dil/dilbert.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dilbert.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231024618id_/http%3A//www.dilbert.com/comics/dilbert/info/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dilbert.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005416id_/http%3A//www.dilbert.com/comics/dilbert/info/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -229,11 +229,11 @@ rag_f="http://www.dataviz.com/dilberthome";
 			    <option value="/comics/acaseinpoint/index.html">A Case in Point</option>
 			    <option value="/wash/cheapthrills/index.html">Cheap Thrills</option>
 			    <option value="/comics/committed/index.html">Committed</option>
-			    <option value="/comics/cowandboy/index.html">Cow and Boy</option>
+			    <option value="/comics/cowandboy/index.html">Cow &amp; Boy</option>
 			    <option value="/comics/dilbert/index.html">Dilbert.com</option>
+			    <option value="/creators/dogeat/index.html">Dog eat Doug</option>
 			    <option value="/creators/dinetteset/index.html">The Dinette Set</option>
                       <option value="/comics/drabble/index.html">Drabble</option>
-			    <option value="/comics/ellingtonway/index.html">Ellington Way</option>
 			    			    <option value="/comics/farcus/index.html">Farcus</option>
 			    <option value="/comics/fatcats/index.html">Fat Cats Classics</option>
 
@@ -245,6 +245,7 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option value="/comics/frazz/index.html">Frazz</option>	
 				<option value="/comics/geech/index.html">Geech Classics</option>
 				<option value="/comics/getfuzzy/index.html">Get Fuzzy</option>
+								<option value="/creators/girls/index.html">Girls &amp; Sports</option>
 				<option value="/comics/gofish/index.html">Go Fish</option>
 				<option value="/comics/graffiti/index.html">Graffiti</option>
 				<option value="/comics/grandave/index.html">Grand Avenue</option>
@@ -256,8 +257,8 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option value="/comics/janesworld/index.html">Jane's World Classics</option>
 				<option value="/comics/jumpstart/index.html">Jump Start</option>
 				<option value="/comics/kitncarlyle/index.html">Kit 'N' Carlyle</option>
-				<option value="/comics/levelpath/index.html">Level Path</option>
 				<option value="/creators/liberty/index.html">Liberty Meadows</option>
+				<option value="/comics/littledee/index.html">Little Dee</option>
 				<option value="/comics/lilabner/index.html">Li'l Abner Classics</option>
 				<option value="/creators/lila/index.html">The Meaning of Lila</option>
                         <option value="/comics/lola/index.html">Lola</option>
@@ -272,6 +273,7 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option value="/creators/naturalselection/index.html">Natural Selection</option>
 				<option value="/comics/offthemark/index.html">Off The Mark</option>
 				<option value="/creators/onebighappy/index.html">One Big Happy Classics</option>
+				<option value="/wash/opus/index.html">Opus</option>
 				<option value="/creators/othercoast/index.html">The Other Coast</option>
 				<option value="/wash/genepool/index.html">Out of the Gene Pool</option>
 				<option value="/comics/hedge/index.html">Over the Hedge</option>
@@ -299,7 +301,7 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option value="/comics/sunshineclub/index.html">The Sunshine Club</option>
 				<option value="/comics/tarzan/index.html">Tarzan Classics</option>
 				<option value="/wash/thatslife/index.html">That's Life</option>
-				<option value="/comics/unfit/index.html">Unfit</option>
+                        <option value="/wash/watch/index.html">Watch Your Head</option>
 				<option value="/creators/wizardofid/index.html">Wizard of Id</option>
 				<option value="/comics/workingdaze/index.html">Working Daze</option>
 				<option value="/creators/workingitout/index.html">Working It Out</option>
@@ -308,6 +310,7 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option>Editorial Cartoons</option>
 				<option>--------</option>
                 <option value="/editoons/adcock/index.html">Brian Adcock</option>
+                <option value="/editoons/anderson/index.html">Nick Anderson</option>
 				<option value="/editoons/ariail/index.html">Robert Ariail</option>
 				<option value="/editoons/asay/index.html">Chuck Asay</option>
                 <option value="/editoons/lamerica/index.html">Best of Latin America</option>
@@ -339,6 +342,7 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option value="/editoons/pismet/index.html">Petar Pismetrovic</option>
                 <option value="/editoons/peray/index.html">Stephane Peray</option>
 				<option value="/editoons/rogers/index.html">Rob Rogers</option>
+				<option value="/editoons/sack/index.html">Steve Sack</option>
 				<option value="/editoons/schorr/index.html">Bill Schorr</option>
 				<option value="/editoons/simanca/index.html">Simanca</option>
 				<option value="/editoons/slane/index.html">Chris Slane</option>
@@ -347,6 +351,7 @@ rag_f="http://www.dataviz.com/dilberthome";
 				<option value="/editoons/szep/index.html">Paul Szep</option>
                 <option value="/editoons/tab/index.html">Tab</option>
 				<option value="/editoons/varvel/index.html">Gary Varvel</option>
+				<option value="/editoons/wilkinson/index.html">Signe Wilkinson</option>
 				<option value="/editoons/wolverton/index.html">Monte Wolverton</option>
 				<option value="/editoons/wright/index.html">Larry Wright</option>
  
