--- a/g/ge/gen/genealogy.com.html
+++ b/g/ge/gen/genealogy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the genealogy.com privacy policy that was archived on 2004-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208070421id_/http%3A//www5.genealogy.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the genealogy.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005424id_/http%3A//www5.genealogy.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Genealogy.com:  Privacy Statement</title>
@@ -42,10 +42,10 @@ genealogy.com, Banner Blue Software, Family Tree Maker, Family Archive CD, Famil
 		<td width="476"><img src="/spacer.gif" width="1" height="10"></td>
 	</tr>
 	<tr>
-    <td width="476"><script src="/javascript/adServer.js"></script><script src="/javascript/cookies.js"></script><script src="/javascript/ActiveListCookie.js"></script><script language="JavaScript" src="/javascript/cookies.js"></script><script>showAd("banner")</script><script language="JavaScript1.1" src="https://web.archive.org/web/20040404094929/http://adserver.ancestry.com/RealMedia/ads/adstream_jx.ads/www.genealogy.com/default/1430554023@Top,Position1!Top?"></script></td>
+    <td width="476"><script src="/javascript/adServer.js"></script><script src="/javascript/cookies.js"></script><script src="/javascript/ActiveListCookie.js"></script><script language="JavaScript" src="/javascript/cookies.js"></script><script>showAd("banner")</script><script language="JavaScript1.1" src="https://web.archive.org/web/20040404094929/http://adserver.ancestry.com/RealMedia/ads/adstream_jx.ads/www.genealogy.com/default/1211958924@Top,Position1!Top?"></script></td>
 	</tr>
 	<tr>
-		<td width="725" colspan="2"><img src="/fragments/topnav_ad_bottom.gif" width="725" height="40" usemap="#topnav_normal" border="0"></td>
+		<td width="725" colspan="2"><img src="/fragments/topnav_ad_bottom_withlogin.gif" width="725" height="40" usemap="#topnav_normal" border="0"></td>
 	</tr>
 </tbody></table>
 
@@ -53,7 +53,8 @@ genealogy.com, Banner Blue Software, Family Tree Maker, Family Archive CD, Famil
 
 <map name="topnav_normal">
 <area shape="rect" coords="648,11,711,40" href="/help/index.html">
-<area shape="rect" coords="573,11,646,40" href="http://www.familytreemaker.com/cgi-bin/store.cgi">
+<area shape="rect" coords="573,11,646,40" href="http://familytreemaker.genealogy.com/cgi-bin/store.cgi">
+<area alt="" coords="508,11,562,40" href="/cgi-bin/login.cgi">
 <area shape="rect" coords="448,16,500,35" href="/storemain.html" onmouseover="popUp('elMenu6',event);" onmouseout="popDown('elMenu6');">
 <area shape="rect" coords="383,16,445,35" href="/allsearch.html" onmouseover="popUp('elMenu4',event);" onmouseout="popDown('elMenu4');">
 <area shape="rect" coords="241,16,380,35" href="/mygenealogy/index.html" onmouseover="popUp('elMenu5',event);" onmouseout="popDown('elMenu5');">
@@ -91,7 +92,7 @@ genealogy.com, Banner Blue Software, Family Tree Maker, Family Archive CD, Famil
       <td colspan="2"><img src="/images/spacer.gif" alt=" " width="1" height="4"></td>
     </tr>
     <tr>
-      <td colspan="2"><a href="/company.html"><font size="2" face="Arial,Sans-Serif">About Genealogy.com</font></a></td>
+      <td colspan="2"><a href="http://www.myfamilyinc.com"><font size="2" face="Arial,Sans-Serif">About Genealogy.com</font></a></td>
     </tr>
     <tr>
       <td colspan="2"><img src="/images/spacer.gif" alt=" " width="1" height="4"></td>
@@ -134,6 +135,12 @@ genealogy.com, Banner Blue Software, Family Tree Maker, Family Archive CD, Famil
     </tr>
     <tr>
       <td colspan="2"><a href="http://www.myfamilyinc.com/about_us/copyright.htm"><font size="2" face="Arial,Sans-Serif">Copyright Information</font></a></td>
+    </tr>
+    <tr>
+      <td colspan="2"><img src="/images/spacer.gif" alt=" " width="1" height="4"></td>
+    </tr>
+    <tr>
+      <td colspan="2"><a href="/security_tips.html"><font size="2" face="Arial,Sans-Serif">Fraud Prevention</font></a></td>
     </tr>
 
     </tbody></table></td>
@@ -374,7 +381,7 @@ Any of the policies or procedures described above may be changed at any time wit
         <td align="center"><a href="/genealogy/help/index.html"><font face="Arial,sans-serif" size="2" color="#FFFFFF">Help</font></a></td>
 			<td align="center"><font face="Arial,sans-serif" size="2" color="#FFFFFF">|</font></td>
 			
-        <td align="center"><a href="/genealogy/company.html"><font face="Arial,sans-serif" size="2" color="#FFFFFF">About 
+        <td align="center"><a href="http://www.myfamilyinc.com"><font face="Arial,sans-serif" size="2" color="#FFFFFF">About 
           Us</font></a></td>
 			<td align="center"><font face="Arial,sans-serif" size="2" color="#FFFFFF">|</font></td>
 			
@@ -395,12 +402,12 @@ Any of the policies or procedures described above may be changed at any time wit
 	<!--End Nested Table-->
 </tr>
 <tr> 
+	
   
 <td colspan="5" align="center"><font face="arial, sans-serif" size="1">© 
-2004 MyFamily.com, Inc.</font></td>
+2006 MyFamily.com, Inc.</font></td>
 </tr>
 </tbody></table>
-
 
 <!-- END TABLE 1.0 -->
 <map name="global_nav">
@@ -412,7 +419,7 @@ Any of the policies or procedures described above may be changed at any time wit
 	<area shape="rect" coords="0, 0, 94, 82" href="/genehelp.html" onmouseover="popUp('elMenu1',event);" onmouseout="popDown('elMenu1');">
 </map>
 <script language="JavaScript1.2" src="/javascript/site_page_classify.js"></script>
-<script language="JavaScript" src="/javascript/s_code_remote.js"></script><img name="s_i_gcom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/gcom/1/G.4-Pd-R/s15435510632791?[AQB]&amp;ndh=1&amp;t=30/0/2020%209%3A44%3A50%204%200&amp;pageName=web.archive.org%3Aweb/20041208070421id_/http%253A//www5.genealogy.com/privacy.html&amp;server=web.archive.org&amp;g=https%3A//web.archive.org/web/20041208070421id_/http%253A//www5.genealogy.com/privacy.html&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script language="JavaScript" src="/javascript/s_code_remote.js"></script><img name="s_i_gcom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/gcom/1/G.4-Pd-R/s12358621345014?[AQB]&amp;ndh=1&amp;t=30/0/2020%209%3A44%3A54%204%200&amp;pageName=web.archive.org%3Aweb/20060615005424id_/http%253A//www5.genealogy.com/privacy.html&amp;server=web.archive.org&amp;g=https%3A//web.archive.org/web/20060615005424id_/http%253A//www5.genealogy.com/privacy.html&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 
 <script language="JavaScript1.2" src="/javascript/TSpacer_wrapper.js"></script>
 
