--- a/m/ma/mac/macgamefiles.com.html
+++ b/m/ma/mac/macgamefiles.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the macgamefiles.com privacy policy that was archived on 2004-02-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040211215704id_/http%3A//macgamefiles.com/policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the macgamefiles.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005539id_/http%3A//macgamefiles.com/policy.php) for the most accurate reproduction.-->
 
 <html><head>
+	<link rel="alternate" type="application/rss+xml" href="rss.php" title="MacGameFiles RSS Feed">
 	<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Macgamefiles.com - Privacy Policy</title>
 	
@@ -30,58 +31,140 @@ function dimout(dasIMG)  {
    if (document.images) { document.images[dasIMG].src = eval(dasIMG + "OFF.src"); }
 }
 // -->
-</script>
-</head>
-<body bgcolor="#FFFFFF" link="#35425d" alink="#35425d" vlink="#35425d">
+</script><style type="text/css"><!--
+	BODY {
+		margin: 10px;
+		font-family: 	verdana,helvetica,geneva,arial,sans-serif;
+		font-size:		11px;
+	}
+	P,TABLE,TH,TD {   
+		font-family: 	verdana,helvetica,geneva,arial,sans-serif;
+		font-size:		11px;
+	}
+//--></style>
+		<!-- start Vibrant Media IntelliTXT Tooltip style sheet -->
+		<style type="text/css">
+		.iTt{
+			FONT-FAMILY:       Verdana, Arial, Helvetica;
+			FONT-SIZE:         11px;
+			FONT-STYLE:        normal;
+			FONT-WEIGHT:       normal;
+			COLOR:             black;
+			BACKGROUND-COLOR:  lightyellow;
+			BORDER:            black 1px solid;
+			PADDING:           2px;
+		}
+		</style>
+		<!-- end Vibrant Media IntelliTXT style sheet -->
+		</head>
+<body bgcolor="#FFFFFF" link="#35425d" alink="#35425d" vlink="#35425d"><table cellpadding="0" cellspacing="0" border="0" width="728" align="center">
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-<tbody><tr height="108">
-	<td width="100%" height="108" valign="top" background="imgs_header/header.gif">
-		<table border="0" cellpadding="0" cellspacing="10" align="right">
+
+<!-- LINK BAR
+<TR>
+	<TD WIDTH=726 VALIGN="middle" BGCOLOR="#98a5b7" BACKGROUND="imgs_header/probar_txtr.gif"><TABLE BORDER=0 CELLPADDING=0 CELLSPACING=0 WIDTH="100%">
+	</TR>
+	</TABLE></TD>
+	<TD WIDTH=2 HEIGHT=25 BGCOLOR="#47424C"><IMG WIDTH=2 HEIGHT=25 SRC="images/space.gif"></TD>
+</TR> -->
+<!-- END LINK BAR -->
+
+
+
+<!-- IMG PRO BAR -->
+<tbody><tr>
+	<td width="726" valign="middle" bgcolor="#98a5b7" background="imgs_header/probar_txtr.gif"><table border="0" cellpadding="0" cellspacing="0" width="100%">
+
+	<tbody><tr>
+		<td valign="middle"><font size="1" face="Verdana,Helvetica,Geneva,Arial">
+			&nbsp;&nbsp;<b><a href="http://www.insidemacgames.com/">InsideMacGames</a></b>
+			&nbsp;|&nbsp; <b><a href="http://www.macgamestore.com/">MacGameStore</a></b>
+		</font></td>
+<!--
+		<TD VALIGN="middle"><FONT SIZE=1 FACE="Verdana,Helvetica,Geneva,Arial">
+			&nbsp;&nbsp;<B><A HREF="http://www.insidemacgames.com/pro/">Subscribe to IMG Pro</A></B> and get special MacGameFiles features!
+		</FONT></TD>
+-->	
+		<td valign="middle" align="right" background="images/bkg_solid_trans.gif" nowrap=""><font size="1" face="Verdana,Helvetica,Geneva,Arial"><form method="POST" action="/policy.php" style="margin:0px;border:0px;padding:0px;">
+			<input type="HIDDEN" name="securecheck" value="79825658">
+			<b><a href="http://www.insidemacgames.com/pro/">IMG Pro</a></b> Login:&nbsp;
+		
+			<input type="TEXT" size="12" name="IMGProEmail" value="Account Email" onfocus="if (this.value == 'Account Email') this.value = '';" onblur="if (this.value == '') this.value = 'Account Email';">
+			<input type="PASSWORD" size="12" name="IMGProPassword" value="Password" onfocus="if (this.value == 'Password') this.value = '';" onblur="if (this.value == '') this.value = 'Password';">
+
+			<input type="SUBMIT" name="ProLogin" value="Login">
+		</form></font></td>
+	</tr>
+	
+	</tbody></table></td>
+	<td width="2" height="25" bgcolor="#47424C"><img width="2" height="25" src="images/space.gif"></td>
+</tr>
+<!-- END IMG PRO BAR -->
+
+
+
+
+
+
+<tr height="108">
+	<td width="726" height="108" valign="top" bgcolor="#98a5b7" background="imgs_header/header.gif">
+		<table border="0" cellpadding="0" cellspacing="5" width="100%">
 			<tbody><tr>
-				<td bgcolor="98a5b7" background="images/bkg_solid_trans.gif" align="RIGHT"><a href="http://insidemacgames.com/" target="_blank"><img width="75" height="85" src="imgs_ads/img_network.gif" border="0"></a></td>
-			</tr>
-		</tbody></table><table border="0" cellpadding="0" cellspacing="5">
-			<tbody><tr>
-			<td bgcolor="98a5b7" background="images/bkg_solid_trans.gif" nowrap=""><font size="1" face="Verdana,Helvetica,Geneva,Arial" color="FFFFFF"><b>
+				<td valign="top" background="images/bkg_solid_trans.gif" nowrap=""><font size="1" face="Verdana,Helvetica,Geneva,Arial" color="FFFFFF"><b>
+<!--
 			&nbsp;&nbsp;
-			<a href="news.php"><font color="FFFFFF">news</font></a>			&nbsp;|&nbsp;
+			<A HREF="http://www.insidemacgames.com/"><FONT COLOR=FFFFFF>InsideMacGames</FONT></A>
+			&nbsp;|&nbsp;
+			<A HREF="http://www.macgamestore.com/"><FONT COLOR=FFFFFF>MacGameStore</FONT></A>
+			&nbsp;&nbsp;&nbsp;&nbsp;
+			<A HREF="news.php"><FONT COLOR=FFFFFF>news</FONT></A>			&nbsp;|&nbsp;
+-->			
 			<a href="report_dead_links.php"><font color="FFFFFF">report dead link</font></a>			&nbsp;|&nbsp;
 			<a href="submit_a_file.php"><font color="FFFFFF">submit a file</font></a>			&nbsp;|&nbsp;
 			<a href="contact.php"><font color="FFFFFF">contact</font></a>			&nbsp;|&nbsp;
-			<a href="about_mgf.php"><font color="FFFFFF">about mgf</font></a>			&nbsp;|&nbsp;
-			<a href="be_a_mirror.php"><font color="FFFFFF">become a MGF mirror!</font></a>			</b></font></td>
+			<a href="about_mgf.php"><font color="FFFFFF">about mgf</font></a><!--
+			&nbsp;|&nbsp;
+			<A HREF="be_a_mirror.php"><FONT COLOR=FFFFFF>become a MGF mirror!</FONT></A>-->			
+				</b></font></td>
+		
+				<td valign="middle" align="right" background="images/bkg_solid_trans.gif"><table border="0" cellpadding="0" cellspacing="5" align="right">
+				<tbody><tr>
+					<td background="images/bkg_solid_trans.gif" align="right" nowrap=""><a href="http://www.insidemacgames.com/" target="_blank"><img width="75" height="85" src="imgs_ads/img_network.gif" border="0"></a></td>
+				</tr>
+				</tbody></table></td>
 			</tr>
 		</tbody></table>
 	</td>
-	<td width="2" height="108"><img width="2" height="108" src="imgs_header/headeredge.gif"></td>
+	<td width="2" height="108" bgcolor="#47424C"><img width="2" height="108" src="images/space.gif"></td>
 </tr>
-<tr height="31">
-	<td width="100%" height="31" background="imgs_header/headbottom.gif"><a href="./" onmouseover="lightup('home');" onmouseout="dimout('home');"><img src="imgs_header/home.gif" width="77" height="31" name="home" border="0"></a><a href="index.php?cat=1" 1="" onmouseover="lightup('demos');" onmouseout="dimout('demos');"><img src="imgs_header/demos.gif" width="75" height="31" name="demos" border="0"></a><a href="index.php?cat=2" 2="" onmouseover="lightup('shareware');" onmouseout="dimout('shareware');"><img src="imgs_header/shareware.gif" width="75" height="31" name="shareware" border="0"></a><a href="index.php?cat=3" 3="" onmouseover="lightup('updaters');" onmouseout="dimout('updaters');"><img src="imgs_header/updaters.gif" width="75" height="31" name="updaters" border="0"></a><a href="index.php?cat=4" 4="" onmouseover="lightup('tools');" onmouseout="dimout('tools');"><img src="imgs_header/tools.gif" width="75" height="31" name="tools" border="0"></a><a href="index.php?cat=5" 5="" onmouseover="lightup('addonz');" onmouseout="dimout('addonz');"><img src="imgs_header/addonz.gif" width="75" height="31" name="addonz" border="0"></a><a href="index.php?cat=6" 6="" onmouseover="lightup('movies');" onmouseout="dimout('movies');"><img src="imgs_header/movies.gif" width="80" height="31" name="movies" border="0"></a></td>
+<tr>
+	<td width="100%" height="31" background="imgs_header/headbottom.gif"><a href="/" onmouseover="lightup('home');" onmouseout="dimout('home');"><img src="imgs_header/home.gif" width="77" height="31" name="home" border="0"></a><a href="index.php?cat=1" 1="" onmouseover="lightup('demos');" onmouseout="dimout('demos');"><img src="imgs_header/demos.gif" width="75" height="31" name="demos" border="0"></a><a href="index.php?cat=2" 2="" onmouseover="lightup('shareware');" onmouseout="dimout('shareware');"><img src="imgs_header/shareware.gif" width="75" height="31" name="shareware" border="0"></a><a href="index.php?cat=3" 3="" onmouseover="lightup('updaters');" onmouseout="dimout('updaters');"><img src="imgs_header/updaters.gif" width="75" height="31" name="updaters" border="0"></a><a href="index.php?cat=4" 4="" onmouseover="lightup('tools');" onmouseout="dimout('tools');"><img src="imgs_header/tools.gif" width="75" height="31" name="tools" border="0"></a><a href="index.php?cat=5" 5="" onmouseover="lightup('addonz');" onmouseout="dimout('addonz');"><img src="imgs_header/addonz.gif" width="75" height="31" name="addonz" border="0"></a><a href="index.php?cat=6" 6="" onmouseover="lightup('movies');" onmouseout="dimout('movies');"><img src="imgs_header/movies.gif" width="80" height="31" name="movies" border="0"></a></td>
 
-	<td width="2" height="31"><img width="2" height="31" src="imgs_header/headbottomedge.gif"></td>
+	<!--<TD width=2 height=31><IMG width=2 height=31 src="imgs_header/headbottomedge.gif"></TD>-->
+	<td width="2" height="31" bgcolor="#47424C"><img width="2" height="31" src="images/space.gif"></td>
+	
 </tr>
-<tr><form method="POST" action="/policy.php"></form><input type="HIDDEN" name="set" value="cookie">
-	<td colspan="2" align="LEFT" nowrap="">
-		<img src="imgs_header/os_pref.gif" width="97" height="19" border="0">
-		<input type="IMAGE" src="imgs_header/os_c_O.gif" name="ostype_classic" value="ostype_classic" width="67" height="19" border="0">
-		<input type="IMAGE" src="imgs_header/os_x_O.gif" name="ostype_osx" value="ostype_osx" width="76" height="19" border="0">
-		<input type="IMAGE" src="imgs_header/os_b_X.gif" name="ostype_both" value="ostype_both" width="52" height="19" border="0">
-	</td>
-
-</tr><tr height="100">
-	<td colspan="2" height="100" align="center" nowrap=""><a href="http://www.insidemacgames.com/include/ads.php?AdID=98"><img src="/ads/owc/30.HD.728.011404.gif" border="0"></a></td>
-</tr>
-
-
-<tr height="2">
-	<td colspan="2" height="2" align="center"><img width="640" height="2" src="images/spacer.gif"></td>
-</tr>
-</tbody></table><table border="0" cellpadding="0" cellspacing="2" width="100%">
-	<tbody><tr height="2">
-		<td colspan="3" height="2" align="center"><img width="640" height="2" src="images/spacer.gif"></td>
+<!--
+<TR><FORM METHOD=POST ACTION="/policy.php"><INPUT TYPE=HIDDEN NAME="set" VALUE="cookie">
+	<TD colspan=2 align=LEFT NOWRAP>
+		<IMG SRC="imgs_header/os_pref.gif" WIDTH=97 HEIGHT=19 BORDER=0>
+		<INPUT TYPE=IMAGE SRC="imgs_header/os_c_O.gif" NAME="ostype_classic" VALUE="ostype_classic" WIDTH=67 HEIGHT=19 BORDER=0>
+		<INPUT TYPE=IMAGE SRC="imgs_header/os_x_O.gif" NAME="ostype_osx" VALUE="ostype_osx" WIDTH=76 HEIGHT=19 BORDER=0>
+		<INPUT TYPE=IMAGE SRC="imgs_header/os_b_O.gif" NAME="ostype_both" VALUE="ostype_both" WIDTH=52 HEIGHT=19 BORDER=0>
+	</TD></FORM>
+</TR>
+-->
+	<tr>
+		<td colspan="2" align="center"><img width="640" height="6" src="images/spacer.gif"></td>
 	</tr>
 	<tr>
+		<td colspan="2" align="center" nowrap=""><a href="http://www.insidemacgames.com/adserver/adclick.php?maxparams=2__bannerid=238__zoneid=2__cb=2a83ac44cb__maxdest=http://www.aspyr.com/games.php/mac/quake4/" target="_blank"><img src="http://downloads2.macgamefiles.com/files/ads/aspyr/quake4_728x90.jpg" width="728" height="90" alt="" title="" border="0"></a><div id="beacon_238" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.insidemacgames.com/adserver/adlog.php?bannerid=238&amp;campaignid=6&amp;zoneid=2&amp;source=&amp;block=0&amp;capping=0&amp;session_capping=0&amp;cb=2a83ac44cb" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div></td>
+	</tr>
+	<tr>
+		<td colspan="2" align="center"><img width="640" height="6" src="images/spacer.gif"></td>
+	</tr>
+</tbody></table><table cellpadding="0" cellspacing="0" border="0" width="728" align="center">
+	<tbody><tr>
 		<td valign="top">
 
 
@@ -143,20 +226,22 @@ function dimout(dasIMG)  {
 	</tr>
 </tbody></table><br>
 </center>
-
 	</td>
 </tr>
 </tbody></table>
 
 
-<table border="0" align="CENTER"><tbody><tr><td><a href="http://www.insidemacgames.com/include/ads.php?AdID=115"><img src="/ads/owc/31.PowerBook.728.011404.gif" border="0"></a></td></tr></tbody></table>
+<table cellpadding="2" cellspacing="0" border="0" width="728" align="center"><tbody><tr><td><a href="http://www.insidemacgames.com/adserver/adclick.php?maxparams=2__bannerid=235__zoneid=22__cb=69109f89be__maxdest=http://www.macgamestore.com/detail.php?ProductID=550" target="_blank"><img src="http://downloads2.macgamefiles.com/files/ads/img/jetsnguns728.jpg" width="728" height="90" alt="" title="" border="0"></a><div id="beacon_235" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.insidemacgames.com/adserver/adlog.php?bannerid=235&amp;campaignid=100&amp;zoneid=22&amp;source=&amp;block=0&amp;capping=0&amp;session_capping=0&amp;cb=69109f89be" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div></td></tr></tbody></table>
 
 
-		<table cellpadding="0" cellspacing="3" border="0" width="99%">
+		<table cellpadding="0" cellspacing="3" border="0" width="728" align="center">
 <tbody><tr><td>&nbsp;</td></tr>
 <tr>
-	<td align="CENTER"><font size="1" color="#35425d" face="Verdana,Helvetica,Geneva,Arial">Copyright © 2000 macgamefiles.com, All rights reserved. <a href="policy.php">Privacy Policy</a>. <a href="terms.php">Terms and Conditions</a>.</font></td>
+	<td align="CENTER"><font size="1" color="#35425d" face="Verdana,Helvetica,Geneva,Arial">Copyright © 2000-2005 Macgamefiles.com, All rights reserved. <a href="policy.php">Privacy Policy</a>. <a href="terms.php">Terms and Conditions</a>.</font></td>
+	</tr><tr>
+	<td align="CENTER"><a href="http://macgamefiles.us.intellitxt.com/intellitxt/switch.asp?IPID=3322&amp;state=off&amp;url=http://www.vibrantmedia.com/whatIsIntelliTXT.asp?ipid%3D3322%26cc%3Dus%26server%3Dmacgamefiles%2Eus%2Eintellitxt%2Ecom">Turn off IntelliTxt Ads</a></td>
 </tr>
 </tbody></table>
-		
+<table cellpadding="2" cellspacing="0" border="0" width="728" align="center"><tbody><tr><td align="center"><a href="http://www.anrdoezrs.net/click-1321585-4061459">eHarmony</a>&nbsp;&nbsp;<a href="http://www.airsoftpaintballs.com/shopping/desc_DesertEagle-Gas.asp">Desert Eagle-Style Airsoft Guns</a>&nbsp;&nbsp;<a href="http://www.digitalpoint.com/ads/ebay.php">Buy Anything On eBay</a>&nbsp;&nbsp;<a href="http://www.avatarsx.com/">Free Avatars</a>&nbsp;&nbsp;<a href="http://www.moviereviewsnet.com/">Read Film Reviews</a></td></tr></tbody></table>
+	
 		</body></html>
